--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -146,7 +146,6 @@ buyNow:
     <p class = 'lead'>
     For a limited time only: <br>
     <strong>£14.99</strong> <del>£20.00</del>
-
     </p>
     <p class='lead'>
     Buy now and receive a PDF copy of the book along with other relevant materials within 24 hours!
@@ -161,28 +160,18 @@ buyNow:
     _2x: "img/buyNow/book_cover2x.png"
 
     
-# contact
-contact:
-  enable: false
-  title: "Contact"
-  form:
-    method: "POST"
-    action: "#"
-    full_name: "Full Name"
-    email: "Email Address"
-    message: "Type Your Message Here"
-  phone:
-    title: "Phone Number"
-    number: "+41 (44) 505 10 99"
-  email:
-    title: "Email"
-    email: '<a href="mailto:team@radity.com">team@radity.com</a>'
-  address:
-    title: "Address"
-    address: "Radity GmbH<br />Max-Bill-Platz 5, 8050 Zürich"
+# preview
+preview:
+  enable: true
+  title: "The First 10 Pages."
+  subtitle: "Take a look! Includes the Contents Page, Preface and part of the Introduction."
+  image:
+    x: "img/buyNow/book_cover.png"
+    _2x: "img/buyNow/book_cover2x.png"
   button:
     icon: "icon-mail-fill"
-    btnText: "Send Message"
+    btnText: "Be wowed"
+    target: "pdf/dummy.pdf"
 
 # newsletter
 newsletter:
