--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -144,11 +144,11 @@ buyNow:
     We're not here to waste time or money. We're here to read law in a reputable UK university, and there's no better place to start than here.
     </p>
     <p class = 'lead'>
-    For a limited time only: <br>
+    Special Promotion!: <br>
     <strong>£14.99</strong> <del>£20.00</del>
     </p>
     <p class='lead'>
-    Buy now and receive a PDF copy of the book along with other relevant materials within 24 hours!
+    Buy now and receive a PDF copy of the book along with other relevant materials instantly!
     </p>"
   button:
     icon: "icon-mail-fill"
